# genesis_core

./: .gitignore  .markdownlint.yaml  404.html  AGENTS.md  CODEOWNERS  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  index.html  mkdocs.yml  project_settings.json  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  test-requirements.txt  tox.ini
.github/workflows/: build.yml  docs.yml  inventory.yml  markdownlint.yml  publish-to-pypi.yml  tests.yml
app-developer-guide/: index.html
app-developer-guide/deploy/: index.html
app-developer-guide/init/: index.html
app-developer-guide/push/: index.html
artifacts/: dhcpd.conf
docs/: faq.md  iam.md  index.md  index.ru.md  onepager.md  openapi-user-api.yaml
docs/app-developer-guide/: build.md  build.ru.md  deploy.md  deploy.ru.md  index.md  index.ru.md  init.md  init.ru.md  push.md  push.ru.md
docs/em/: cli.md  (+5 more)
etc/: 90-exordos-net-config.yaml.j2  90-genesis-dummy-config.yaml  90-genesis-net-base-config.yaml
exordos_core/: version.py
genesis/: genesis.yaml
genesis_core/: version.py
migrations/: 0000-init-compute-tables-0234eb.py  0000-init-config-tables-9a7b58.py  0000-init-discovery-tables-907a68.py  0000-init-elements-tables-fe8bdb.py  0000-init-iam-tables-9c9153.py  0000-init-values-and-profiles-tables-0a61dc.py  0000-root-d34de1.py  0001-init-all-tables-f47bad.py  0002-add-volumes-tables-a6972c.py  0003-Organization-Roles-4b584d.py  0004-fix_typoes-31d9b2.py  0005-add-organization-info-4fac91.py  0006-add-gc-organization-678510.py  0006-node-builder-entities-0d8f66.py  0007-add-default-roles-73f4c4.py  0008-add-iam-permissions-d81bba.py  0008-node-builder-entities-0d8f66.py  0009-node-builder-entities-0d8f66.py  0010-image-for-machine-31471a.py  0011-add-surname-and-phone-ea974b.py  0011-compute-permissions-aac851.py  0012-compute-permissions-aac851.py  0013-add-ttl-to-token-2b8e3e.py  0014-add-email-confirmation-info-8b38d3.py  0014-network-ipam-067981.py  0015-add-email-confirmation-info-8b38d3.py  0015-core-agent-4b8026.py  0016-add-permissions-to-all-iam-resources-3b82c6.py  0016-core-agent-4b8026.py  0017-core-agent-4b8026.py  0017-init-configs-c3bbc6.py  0017-init-dns-40a307.py  0018-add-elements-76bca4.py  0018-init-configs-c3bbc6.py  0018-init-secret-85e1ae.py  0019-add-elements-76bca4.py  0019-init-dns-40a307.py  0020-init-secret-a643b1.py  0021-dns-permissions-7adac7.py  0021-secret-certs-d340e8.py  (+65 more)
openapi/: openapi_orch.yaml  openapi_user.yaml
ru/: index.html
scripts/: bootstrap.sh
search/: search_index.json
tools/: conver_multiline_to_oneline.py  fetch_keycloak_users.py  import_keycloak_users_to_iam.py
(+504 files in other folders)
