[metadata]
name = genesis_core
summary = My project summary
description_file =
    README.md
author = Genesis Corporation
author_email = eugene@frolov.net.ru
home_page = https://github.com/infraguys/genesis_core/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    genesis_core