[metadata]
name = genesis_core
summary = Genesis Core services
description_file =
    README.md
author = Genesis Corporation
author_email = eugene@frolov.net.ru
home_page = https://github.com/infraguys/genesis_core/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    genesis_core


[entry_points]
console_scripts =
    gc-user-api = genesis_core.cmd.user_api:main
    gc-orch-api = genesis_core.cmd.orch_api:main
    gc-status-api = genesis_core.cmd.status_api:main
    gc-gservice = genesis_core.cmd.gservice:main
    gc-core-agent = genesis_core.cmd.core_agent:main
    gc-bootstrap = genesis_core.cmd.bootstrap:main
    gc-manifest-parser = genesis_core.cmd.manifest_parser:main

gcn_machine_pool_driver =
    DummyPoolDriver = genesis_core.compute.pool.drivers.base:DummyPoolDriver
    libvirt = genesis_core.compute.pool.drivers.libvirt:LibvirtPoolDriver
gcn_network_driver =
    DummyNetworkDriver = genesis_core.network.driver.base:DummyNetworkDriver
    FlatBridgeNetworkDriver = genesis_core.network.driver.flat:FlatBridgeNetworkDriver
gcl_sdk_event_payloads =
    IamUserRegistration = genesis_core.events.payloads:RegistrationEventPayload
    IamUserResetPassword = genesis_core.events.payloads:ResetPasswordEventPayload
gcl_sdk_universal_agent =
    PasswordCapabilityDriver = genesis_core.agent.universal.drivers.secret.password:PasswordCapabilityDriver
    CoreDNSCertificateCapabilityDriver = genesis_core.agent.universal.drivers.secret.cert:CoreDNSCertificateCapabilityDriver
